--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Vermont State Prison'
 - !lcc 'HV'
+- GITenberg
 title: "Recollections of Windsor Prison;\r\nContaining Sketches of its History and\
   \ Discipline, with Appropriate Strictures and Moral and Religious Reflection"
 url: http://www.gutenberg.org/ebooks/39370
